<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".EventEditActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/name_message"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/eventNameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/eventDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/date_message"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/eventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/eventTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/time_message"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/eventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="20sp" />

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map_view"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:context=".MapsActivity" />

    </LinearLayout>

</ScrollView>
